--- a/Mnara_El_Seha/package.json
+++ b/Mnara_El_Seha/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-i18next": "^13.0.2",
     "react-native": "0.72.3",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-reanimated": "^3.4.1",
     "react-native-safe-area-context": "^4.7.1",
