--- a/Mnara_El_Seha/package.json
+++ b/Mnara_El_Seha/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "i18n": "^0.15.1",
+    "i18next": "^23.4.1",
     "react": "18.2.0",
     "react-i18next": "^13.0.2",
     "react-native": "0.72.3",
@@ -31,6 +31,7 @@
     "@babel/runtime": "^7.20.0",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.9",
+    "@react-navigation/drawer": "^6.6.3",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
