--- a/Mnara_El_Seha/package.json
+++ b/Mnara_El_Seha/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.72.3",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.12.0",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.4.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.23.0",
