--- a/Mnara_El_Seha/package.json
+++ b/Mnara_El_Seha/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
     "i18n": "^0.15.1",
     "i18next": "^23.4.1",
     "react": "18.2.0",
