--- a/Mnara_El_Seha/android/app/build.gradle
+++ b/Mnara_El_Seha/android/app/build.gradle
@@ -103,9 +103,17 @@ android {
     }
 }
 
+// plugins {
+//   // Add the dependency for the Google services Gradle plugin
+//     id 'com.google.gms.google-services' version '4.3.15' apply false
+// }
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
+
+    // implementation platform('com.google.firebase:firebase-bom:32.2.0')
+    // implementation 'com.google.firebase:firebase-analytics'
+
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
