--- a/Mnara_El_Seha/package.json
+++ b/Mnara_El_Seha/package.json
@@ -12,13 +12,15 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.7",
-    "firebase": "^10.1.0",
     "@react-navigation/stack": "^6.3.17",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
+    "firebase": "^10.1.0",
     "i18n": "^0.15.1",
     "i18next": "^23.4.1",
     "react": "18.2.0",
     "react-i18next": "^13.0.2",
     "react-native": "0.72.3",
+    "react-native-dotenv": "^3.4.9",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-modal": "^13.0.1",
