--- a/Mnara_El_Seha/package.json
+++ b/Mnara_El_Seha/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^18.3.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
