--- a/Mnara_El_Seha/package.json
+++ b/Mnara_El_Seha/package.json
@@ -10,8 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^18.3.0",
+    "@react-native-firebase/auth": "^18.3.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
