--- a/Mnara_El_Seha/package.json
+++ b/Mnara_El_Seha/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.1",
+    "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^18.3.0",
     "@react-native-firebase/auth": "^18.3.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
+    "@twotalltotems/react-native-otp-input": "^1.3.11",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "firebase": "^10.1.0",
     "i18n": "^0.15.1",
