--- a/Mnara_El_Seha/package.json
+++ b/Mnara_El_Seha/package.json
@@ -24,9 +24,11 @@
     "react-i18next": "^13.0.2",
     "react-native": "0.72.3",
     "react-native-dotenv": "^3.4.9",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-modal": "^13.0.1",
+    "react-native-radio-buttons-group": "^3.0.2",
     "react-native-reanimated": "^3.4.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.23.0",
