--- a/Mnara_El_Seha/package.json
+++ b/Mnara_El_Seha/package.json
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-i18next": "^13.0.2",
     "react-native": "0.72.3",
+    "react-native-date-picker": "^4.2.13",
     "react-native-dotenv": "^3.4.9",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
