--- a/Mnara_El_Seha/android/build.gradle
+++ b/Mnara_El_Seha/android/build.gradle
@@ -15,6 +15,10 @@ buildscript {
         mavenCentral()
     }
     dependencies {
+        // plugins {
+        // // Add the dependency for the Google services Gradle plugin
+        //     id 'com.google.gms.google-services' version '4.3.15' apply false
+        // }
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath 'com.google.gms:google-services:4.3.15'
