--- a/Mnara_El_Seha/android/app/build.gradle
+++ b/Mnara_El_Seha/android/app/build.gradle
@@ -102,18 +102,12 @@ android {
         }
     }
 }
+
 // plugins {
-//     id 'com.android.application'
-//   // Add the Google services Gradle plugin
-//     id 'com.google.gms.google-services'
+//   // Add the dependency for the Google services Gradle plugin
+//     id 'com.google.gms.google-services' version '4.3.15' apply false
 // }
-
-
 dependencies {
-    // Import the Firebase BoM
-    implementation platform('com.google.firebase:firebase-bom:32.2.0')
-    implementation 'com.google.firebase:firebase-analytics'
-    
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
 
