--- a/Mnara_El_Seha/android/app/build.gradle
+++ b/Mnara_El_Seha/android/app/build.gradle
@@ -115,6 +115,8 @@ dependencies {
     // implementation platform('com.google.firebase:firebase-bom:32.2.0')
     // implementation 'com.google.firebase:firebase-analytics'
 
+    implementation project(':react-native-fbsdk-next')
+    implementation 'com.facebook.android:facebook-android-sdk:latest.release'
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
