--- a/Mnara_El_Seha/package.json
+++ b/Mnara_El_Seha/package.json
@@ -16,6 +16,7 @@
     "@react-native-firebase/app": "^18.3.0",
     "@react-native-firebase/auth": "^18.3.0",
     "@react-native-google-signin/google-signin": "^10.0.1",
+    "@react-native-twitter-signin/twitter-signin": "^1.2.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
