--- a/Mnara_El_Seha/package.json
+++ b/Mnara_El_Seha/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^18.3.0",
     "@react-native-firebase/auth": "^18.3.0",
+    "@react-native-firebase/messaging": "^18.3.0",
     "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
@@ -34,6 +35,7 @@
     "react-native-fbsdk-next": "^7.2.0",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-modal": "^13.0.1",
+    "react-native-push-notification": "^8.1.1",
     "react-native-radio-buttons-group": "^3.0.2",
     "react-native-reanimated": "^3.4.1",
     "react-native-safe-area-context": "^4.7.1",
