--- a/Mnara_El_Seha/package.json
+++ b/Mnara_El_Seha/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.19.1",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "^9.4.1",
     "@react-native-firebase/app": "^18.3.0",
     "@react-native-firebase/auth": "^18.3.0",
     "@react-native-google-signin/google-signin": "^10.0.1",
