--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -112,11 +112,12 @@ dependencies {
     implementation("com.facebook.react:react-android")
     implementation 'com.facebook.android:facebook-android-sdk:latest.release'
 
-    // implementation platform('com.google.firebase:firebase-bom:32.2.0')
-    // implementation 'com.google.firebase:firebase-analytics'
+    implementation platform('com.google.firebase:firebase-bom:32.2.0')
+    implementation 'com.google.firebase:firebase-analytics'
 
     implementation project(':react-native-fbsdk-next')
     implementation 'com.facebook.android:facebook-android-sdk:latest.release'
+    implementation project(':react-native-push-notification')
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
