--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -5,3 +5,6 @@ includeBuild('../node_modules/@react-native/gradle-plugin')
 
 include ':react-native-fbsdk-next'
 project(':react-native-fbsdk-next').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-fbsdk-next/android')
+
+include ':react-native-push-notification'
+project(':react-native-push-notification').projectDir = file('../node_modules/react-native-push-notification/android')
