--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^9.4.1",
+    "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-native-firebase/app": "^18.3.0",
     "@react-native-firebase/auth": "^18.3.0",
     "@react-native-firebase/messaging": "^18.3.0",
